--- a/.env
+++ b/.env
@@ -11,4 +11,5 @@ SCOPES=activity sleep heartrate profile
 LAMP_BASE=https://api.mind.momonia.net
 LAMP_AUTH=Basic YXN0cmlkLmZsaWNoeUBpbXQtYXRsYW50aXF1ZS5uZXQ6MUFzdHJpZDI= # <Base64(username:password)>
 
-
+FITBIT_STEPS_FREQ=1min
+FITBIT_HR_FREQ=1min
