--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 FLASK_DEBUG=1
 SECRET_KEY=qlsWOzAHPIuXILPSBdDd-a1__ovbtSqB5yPqsOHu933rU0ZPiIQxHBO-kl-janaq
-FITBIT_CLIENT_ID=23TPZK
-FITBIT_CLIENT_SECRET=6a6224a16689eae081dcc9ada94a922a
+FITBIT_CLIENT_ID=23TQXJ
+FITBIT_CLIENT_SECRET=aa3c53620e84e6b531c04d8b079e2de9
 # For production, HTTPS is required by Fitbit:
 #REDIRECT_URI=https://api.mind.momonia.net/oauth/fitbit/callback
 # For local dev (Personal app only), you may temporarily use:
@@ -11,5 +11,5 @@ SCOPES=activity sleep heartrate profile
 LAMP_BASE=https://api.mind.momonia.net
 LAMP_AUTH=Basic YXN0cmlkLmZsaWNoeUBpbXQtYXRsYW50aXF1ZS5uZXQ6MUFzdHJpZDI= # <Base64(username:password)>
 
-FITBIT_STEPS_FREQ=1min
-FITBIT_HR_FREQ=1min
+FITBIT_STEPS_FREQ=1h
+FITBIT_HR_FREQ=1h
